--- a/src/app/components/listado-producto/listado-producto.component.html
+++ b/src/app/components/listado-producto/listado-producto.component.html
@@ -20,27 +20,39 @@
     </ng-container>-->
 
     <!-- Nombre Column -->
-    <ng-container matColumnDef="nombre">
+    <ng-container matColumnDef="nombreProducto">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
-      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.nombreProducto}} </td>
+    </ng-container>
+
+    <!-- Marca Column -->
+    <ng-container matColumnDef="marcaProducto">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Marca </th>
+      <td mat-cell *matCellDef="let element"> {{element.marcaProducto}} </td>
     </ng-container>
 
     <!-- Descripcion Column -->
-    <ng-container matColumnDef="descripcion">
+    <ng-container matColumnDef="descripcionProducto">
       <th mat-header-cell *matHeaderCellDef> Descripcion </th>
-      <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.descripcionProducto}} </td>
+    </ng-container>
+
+    <!-- Categoria Column -->
+    <ng-container matColumnDef="categoriaProducto">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Categoria </th>
+      <td mat-cell *matCellDef="let element"> {{element.categoriaProducto}} </td>
     </ng-container>
 
     <!-- Precio Column -->
-    <ng-container matColumnDef="precio">
+    <ng-container matColumnDef="precioProducto">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Precio </th>
-      <td mat-cell *matCellDef="let element"> {{element.precio}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.precioProducto}} </td>
     </ng-container>
 
-    <!-- Stock Column -->
-    <ng-container matColumnDef="stock">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Stock </th>
-      <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
+    <!-- SKU Column -->
+    <ng-container matColumnDef="skuProducto">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> SKU </th>
+      <td mat-cell *matCellDef="let element"> {{element.skuProducto}} </td>
     </ng-container>
 
     <!-- Acciones Column -->
@@ -49,9 +61,9 @@
         <button routerLink="/agregarProducto" class="agregar" mat-raised-button color="primary">Agregar</button>
       </th>
       <td mat-cell *matCellDef="let element">
-        <mat-icon routerLink="/verProducto/{{ element.id }}" class="search" matTooltip="Ver" fontIcon="search"></mat-icon>
-        <mat-icon routerLink="/editarProducto/{{ element.id }}" class="edit" matTooltip="Editar" fontIcon="edit"></mat-icon>
-        <mat-icon (click)="eliminarProducto(element.id)" class="delete" matTooltip="Eliminar" fontIcon="delete"></mat-icon>
+        <mat-icon routerLink="/verProducto/{{ element.idProducto }}" class="search" matTooltip="Ver" fontIcon="search"></mat-icon>
+        <mat-icon routerLink="/editarProducto/{{ element.idProducto }}" class="edit" matTooltip="Editar" fontIcon="edit"></mat-icon>
+        <mat-icon (click)="eliminarProducto(element.idProducto)" class="delete" matTooltip="Eliminar" fontIcon="delete"></mat-icon>
       </td>
     </ng-container>
 
@@ -63,5 +75,31 @@
     showFirstLastButtons
     aria-label="Select page of periodic elements">
   </mat-paginator>
+</div>
 
+<div class="container">
+  <mat-toolbar class="example-card" color="primary">
+    <span>Productos en formato tarjeta</span>
+    <button mat-button (click)="toggleGridColumns()" fxHide.lt-md>
+      <span *ngIf="gridColumns === 3">3 elementos por fila</span>
+      <span *ngIf="gridColumns === 4">4 elementos por fila</span>
+    </button>
+  </mat-toolbar>
+  <div class="content">
+    <div fxLayout="row wrap" fxLayoutGap="16px grid">
+      <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let num of [1,2,3,4,5,6]">
+        <mat-card class="mat-elevation-z5">
+          <mat-card-header>
+            <mat-card-title>Nombre producto {{num}}
+            </mat-card-title>
+          </mat-card-header>
+          <div class="example-header-image"><img mat-card-image src="https://material.angular.io/assets/img/examples/shiba1.jpg"></div>
+          <mat-card-actions>
+            <button class="card-button" mat-raised-button color="primary">AGREGAR A CARRITO</button>
+            <button class="card-button" mat-raised-button color="primary">DETALLE</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </div>
+  </div>
 </div>
