Mejora visual de la WebApp
Se retocó los archivos HTML y CSS para darle una mejor calidad visual a la WebApp

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,47 +1,47 @@
 <div class="about-section">
-  <h1>ACERCA DE NOSOTROS</h1>
-  <p>Some text about who we are and what we do.</p>
-  <p>Resize the browser window to see that this page is responsive by the way.</p>
+  <button class="registrarse-button" mat-raised-button routerLink="/home">Volver</button>
+  <button class="logout-button" mat-raised-button routerLink="/login">Cerrar Session</button>
+  <h1>Pastimatic S.R.L</h1>
+  <br>
+  <p>Nuestra empresa surgió a partir de detectar la necesidad de comodidad y
+    seguridad a la hora de consumir los medicamentos.</p>
 </div>
 
-<h2 style="text-align:center">Our Team</h2>
-<div class="row">
-  <div class="column">
-    <div class="card">
-      <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
-      <div class="container">
-        <h2>Jane Doe</h2>
-        <p class="title">CEO & Founder</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>jane@example.com</p>
-        <p><button class="button">Contact</button></p>
-      </div>
-    </div>
+<div class="container">
+  <div class="second-section" id="objetives">
+    <br>
+    <br>
+    <h1>Objetivos</h1>
+    <h2>Fabricar un producto sustentable y reciclable.</h2>
+    <h2>Brindar un producto de uso simple y buena fiabilidad.</h2>
+    <h2>Brindar un producto de bajo costo y facil acceso en lo economico.</h2>
   </div>
-
-  <div class="column">
-    <div class="card">
-      <img src="/w3images/team2.jpg" alt="Mike" style="width:100%">
-      <div class="container">
-        <h2>Mike Ross</h2>
-        <p class="title">Art Director</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>mike@example.com</p>
-        <p><button class="button">Contact</button></p>
-      </div>
-    </div>
-  </div>
-
-  <div class="column">
-    <div class="card">
-      <img src="/w3images/team3.jpg" alt="John" style="width:100%">
-      <div class="container">
-        <h2>John Doe</h2>
-        <p class="title">Designer</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>john@example.com</p>
-        <p><button class="button">Contact</button></p>
-      </div>
-    </div>
+  <div class="second-section" id="members">
+    <br>
+    <br>
+    <h1>Staff</h1>
+    <h2>Diego Funes</h2>
+    <h2>Gianfranco Faggi</h2>
+    <h2>Juan Cruz Clarembaux</h2>
   </div>
 </div>
+
+<div class="product-section">
+  <h1>Nuestro Producto</h1>
+  <br>
+  <p>- Cuenta con 4 compartimentos.</p>
+  <p>- Producto hecho de plastico por su facilidad a la hora de higienizar</p>
+  <p>- Su forma es circular con un tamaño de 12.5cm de diametro x 5 cm de alto.</p>
+</div>
+
+<div class="contact-section">
+  <h1>Contacto</h1>
+  <br>
+  <br>
+  <div class="second-section">
+    <h1>Telefono: xxxx-xxxxxx</h1>
+  </div>
+  <div class="second-section">
+    <h1>Mail: bussiness-user@gmail.com</h1>
+</div>
+<br>
