--- a/src/app/components/about-us/about-us.component.css
+++ b/src/app/components/about-us/about-us.component.css
@@ -7,62 +7,59 @@ html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-.column {
-  float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
-  padding: 0 8px;
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 8px;
-}
-
 .about-section {
   padding: 50px;
   text-align: center;
-  background-color: #474e5d;
+  background-color: #262c3a;
   color: white;
 }
 
-.container {
-  padding: 0 16px;
+.registrarse-button{
+  float: left;
 }
 
-.container::after, .row::after {
-  content: "";
-  clear: both;
-  display: table;
+.logout-button{
+  float: right;
 }
 
-.title {
-  color: grey;
-}
 
-.button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
+.container{
+  background-color: #0e0f0f;
   color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
+  margin: 0;
   width: 100%;
+  height: 50%;
+  text-align: center;
 }
 
-.button:hover {
-  background-color: #555;
+.second-section{
+  float: left;
+  width: 50%;
+  height: 100%;
 }
 
-@media screen and (max-width: 650px) {
-  .column {
-    width: 100%;
-    display: block;
-  }
+#objetives{
+  background: url("../../../../images/objetivos-image.jpg");
+}
+#members{
+  background: url("../../../../images/staff-image.jpg");
+}
+
+.product-section{
+  background-image: url("../../../../images/pastillero-circular-image.png");
+  width: auto;
+  height: 100%;
+  padding: 50px;
+  text-align: center;
+  background-color: #141516;
+  color: white;
+}
+
+.contact-section{
+  width: 94.2%;
+  height: auto;
+  padding: 50px;
+  text-align: center;
+  background-color: #000000;
+  color: white;
 }
