--- a/src/app/components/listado-producto/listado-producto.component.html
+++ b/src/app/components/listado-producto/listado-producto.component.html
@@ -1,4 +1,6 @@
 <div class="tittle">
+  <button class="registrarse-button" mat-raised-button routerLink="/home">Volver</button>
+  <button class="logout-button" mat-raised-button routerLink="/login">Cerrar Session</button>
   <h1>Listado de Productos</h1>
 </div>
 
@@ -75,31 +77,4 @@
     showFirstLastButtons
     aria-label="Select page of periodic elements">
   </mat-paginator>
-</div>
-
-<div class="container">
-  <mat-toolbar class="example-card" color="primary">
-    <span>Productos en formato tarjeta</span>
-    <button mat-button (click)="toggleGridColumns()" fxHide.lt-md>
-      <span *ngIf="gridColumns === 3">3 elementos por fila</span>
-      <span *ngIf="gridColumns === 4">4 elementos por fila</span>
-    </button>
-  </mat-toolbar>
-  <div class="content">
-    <div fxLayout="row wrap" fxLayoutGap="16px grid">
-      <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let num of [1,2,3,4,5,6]">
-        <mat-card class="mat-elevation-z5">
-          <mat-card-header>
-            <mat-card-title>Nombre producto {{num}}
-            </mat-card-title>
-          </mat-card-header>
-          <div class="example-header-image"><img mat-card-image src="https://material.angular.io/assets/img/examples/shiba1.jpg"></div>
-          <mat-card-actions>
-            <button class="card-button" mat-raised-button color="primary">AGREGAR A CARRITO</button>
-            <button class="card-button" mat-raised-button color="primary">DETALLE</button>
-          </mat-card-actions>
-        </mat-card>
-      </div>
-    </div>
-  </div>
 </div>
