--- a/src/app/components/ver-producto/ver-producto.component.html
+++ b/src/app/components/ver-producto/ver-producto.component.html
@@ -1,23 +1,54 @@
-<div class="tittle">
-  <h1>Ver Producto</h1>
-</div>
-
-<!--- *ngIf="producto$ | async as producto"  Se usa cuando se trabaja con PIPE Async --->
 <app-spinner *ngIf="loading"></app-spinner>
-<div *ngIf="producto != null" class="container">
-<mat-card class="card">
-  <!--- {{producto | json}}  Sirve para ver todos los datos del objeto --->
-  <mat-card-title>{{producto.nombreProducto}}</mat-card-title>
-  <mat-card-content>
-    <p><strong>Nombre:</strong> {{producto.nombreProducto}}</p>
-    <p><strong>Marca:</strong> {{producto.marcaProducto}}</p>
-    <p><strong>Descripcion:</strong> {{producto.descripcionProducto}}</p>
-    <p><strong>Categoria:</strong> {{producto.categoriaProducto}}</p>
-    <p><strong>Precio:</strong> ${{producto.precioProducto}}</p>
-    <p><strong>Stock:</strong> {{producto.skuProducto}}</p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button routerLink="/listadoProducto" mat-raised-button>Volver</button>
-  </mat-card-actions>
-</mat-card>
-</div>
+<button class="registrarse-button" mat-raised-button routerLink="/listadoProducto">Volver</button>
+<button class="logout-button" mat-raised-button routerLink="/login">Cerrar Session</button>
+<section id="services" class="services section-bg">
+  <div *ngIf="producto != null" class="container-fluid">
+    <div class="row row-sm">
+        <div class="col-md-6">
+          <div class="_product-detail-content">
+              <p class="_p-name"> {{producto.nombreProducto}} </p>
+              <div class="_p-price-box">
+                <div class="p-list">
+                    <span> Precio: <i class="fa fa-inr"></i></span>
+                    <span class="price"> ${{producto.precioProducto}} </span>
+                </div>
+                <div class="_p-add-cart">
+                    <div class="_p-qty">
+                      <span>Add Quantity</span>
+                      <div class="value-button decrease_" id="" value="Decrease Value">-</div>
+                      <input type="number" name="qty" id="number" value="1" />
+                      <div class="value-button increase_" id="" value="Increase Value">+</div>
+                    </div>
+                </div>
+                <br>
+                <div class="_p-features">
+                    <span> Categoria </span>
+                    {{producto.categoriaProducto}}
+                </div>
+                <br>
+                <div class="_p-features">
+                    <span> Description sobre el producto </span>
+                    {{producto.descripcionProducto}}
+                </div>
+                <form action="" method="post" accept-charset="utf-8">
+                    <ul class="spe_ul"></ul>
+                    <div class="_p-qty-and-cart">
+                      <div class="_p-add-cart">
+                          <button class="btn-theme btn buy-btn" tabindex="0">
+                          <i class="fa fa-shopping-cart"></i> Comprar
+                          </button>
+                          <button class="btn-theme btn btn-success" tabindex="0">
+                          <i class="fa fa-shopping-cart"></i> Agregar a carrito
+                          </button>
+                          <input type="hidden" name="pid" value="18" />
+                          <input type="hidden" name="price" value="850" />
+                          <input type="hidden" name="url" value="" />
+                      </div>
+                    </div>
+                </form>
+              </div>
+          </div>
+        </div>
+    </div>
+  </div>
+</section>
