--- a/src/app/components/ver-producto/ver-producto.component.html
+++ b/src/app/components/ver-producto/ver-producto.component.html
@@ -13,11 +13,11 @@
                     <span class="price"> ${{producto.precioProducto}} </span>
                 </div>
                 <div class="_p-add-cart">
-                    <div class="_p-qty">
-                      <span>Add Quantity</span>
-                      <div class="value-button decrease_" id="" value="Decrease Value">-</div>
-                      <input type="number" name="qty" id="number" value="1" />
-                      <div class="value-button increase_" id="" value="Increase Value">+</div>
+                    <div *ngIf="cantidad != null" class="_p-qty">
+                      <span>Cantidad:</span>
+                      <div class="value-button decrease_" id="" (click)="disminuirCantidad()">-</div>
+                      <input type="number" name="qty" id="quantityNumber" value={{cantidad}} />
+                      <div class="value-button increase_" id="" (click)="aumentarCantidad()">+</div>
                     </div>
                 </div>
                 <br>
@@ -34,7 +34,7 @@
                     <ul class="spe_ul"></ul>
                     <div class="_p-qty-and-cart">
                       <div class="_p-add-cart">
-                          <button class="btn-theme btn buy-btn" tabindex="0">
+                          <button class="btn-theme btn buy-btn" tabindex="0" (click)="createPDF()">
                           <i class="fa fa-shopping-cart"></i> Comprar
                           </button>
                           <button class="btn-theme btn btn-success" tabindex="0">
