--- a/src/app/components/login-register/login/login.component.html
+++ b/src/app/components/login-register/login/login.component.html
@@ -7,8 +7,8 @@
       <i class="fa fa-lock fa-stack-1x"></i>
     </span>
   </p>
-  <input type="email" class="login-username" autofocus="true" required="true" placeholder="Email" formControlName="MailUsuario" matInput autocomplete="off">
-  <input type="password" class="login-password" required="true" placeholder="Password" formControlName="PasswordUsuario" matInput autocomplete="off">
+  <input type="email" class="login-username" autofocus="true" required="true" placeholder="Email" formControlName="mailUsuario" matInput autocomplete="off">
+  <input type="password" class="login-password" required="true" placeholder="Password" formControlName="passwordUsuario" matInput autocomplete="off">
   <button type="submit" class="btn-ingresar" [disabled]="form.invalid" mat-raised-button color="primary">Ingresar</button>
 </form>
 <button class="registrarse-button" mat-raised-button routerLink="/register">Registrarse</button>
