--- a/src/app/components/producto/listado-producto/listado-producto.component.html
+++ b/src/app/components/producto/listado-producto/listado-producto.component.html
@@ -1,6 +1,7 @@
 <div class="tittle">
   <button class="registrarse-button" mat-raised-button routerLink="/home">Volver</button>
   <button class="logout-button" mat-raised-button (click)="cerrarSession()">Cerrar Session</button>
+  <button class="editar-perfil" mat-raised-button (click)="editarPerfil()">Editar Perfil</button>
   <h1>Listado de Productos</h1>
 </div>
 
