--- a/src/app/components/producto/ver-producto/ver-producto.component.html
+++ b/src/app/components/producto/ver-producto/ver-producto.component.html
@@ -34,7 +34,7 @@
                     <ul class="spe_ul"></ul>
                     <div class="_p-qty-and-cart">
                       <div class="_p-add-cart">
-                          <button class="btn-theme btn buy-btn" tabindex="0" (click)="createPDF()">
+                          <button class="btn-theme btn buy-btn" tabindex="0">
                           <i class="fa fa-shopping-cart"></i> Comprar
                           </button>
                           <button class="btn-theme btn btn-success" tabindex="0">
