--- a/src/app/components/usuario/usuario-detalle/editar-usuario-detalle/editar-usuario-detalle.component.html
+++ b/src/app/components/usuario/usuario-detalle/editar-usuario-detalle/editar-usuario-detalle.component.html
@@ -1,1 +1,138 @@
-<p>editar-usuario-detalle works!</p>
+<div class="tittle">
+  <button class="registrarse-button" mat-raised-button routerLink="/listadoProducto">Volver</button>
+  <button class="logout-button" mat-raised-button (click)="cerrarSession()">Cerrar Session</button>
+  <h1>Editar Usuario</h1>
+</div>
+
+<app-spinner *ngIf="loading"></app-spinner>
+<div>
+  <div class="container">
+    <mat-card class="card">
+      <mat-card-subtitle>
+        Datos del Usuario
+      </mat-card-subtitle>
+      <form [formGroup]="form" (ngSubmit)="editarUsuario()">
+        <mat-grid-list cols="2" rowHeight="80px">
+          <mat-grid-tile>
+            <mat-form-field appearance="outline">
+              <mat-label>Mail</mat-label>
+              <input formControlName="mailUsuario" matInput autocomplete="off">
+            </mat-form-field>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <mat-form-field appearance="outline">
+              <mat-label>Contraseña</mat-label>
+              <input formControlName="passwordUsuario" matInput autocomplete="off">
+            </mat-form-field>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <mat-form-field appearance="outline">
+              <mat-label>Nombre</mat-label>
+              <input formControlName="nombreUsuario" matInput autocomplete="off">
+            </mat-form-field>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <mat-form-field appearance="outline">
+              <mat-label>Apellido</mat-label>
+              <input formControlName="apellidoUsuario" matInput autocomplete="off">
+            </mat-form-field>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <mat-form-field appearance="outline">
+              <mat-label>Fecha de Nacimiento</mat-label>
+              <input type="date" formControlName="fechaNacimientoUsuario" matInput autocomplete="off">
+            </mat-form-field>
+          </mat-grid-tile>
+          <mat-grid-tile [colspan]="2">
+            <button type="submit" class="btn-aceptar" [disabled]="form.invalid" mat-raised-button color="primary">Aceptar</button>
+            <button mat-raised-button routerLink="/listadoProducto">Volver</button>
+          </mat-grid-tile>
+        </mat-grid-list>
+      </form>
+    </mat-card>
+  </div>
+  <div class="container">
+    <div class="container-datos-usuario" id="direccion-section">
+      <mat-form-field appearance="standard">
+        <mat-label>Filtro</mat-label>
+        <input matInput (keyup)="applyFilterDirecciones($event)" placeholder="Buscar" #input autocomplete="off">
+      </mat-form-field>
+      <table mat-table [dataSource]="dataSourceDirecciones" class="mat-elevation-z5" matSort>
+
+        <!-- Direccion Column -->
+        <ng-container matColumnDef="direccionUsuario">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Direccion Usuario </th>
+          <td mat-cell *matCellDef="let element"> {{element.direccionUsuario}} </td>
+        </ng-container>
+
+        <!-- Ciudad Column -->
+        <ng-container matColumnDef="ciudad">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Ciudad </th>
+          <td mat-cell *matCellDef="let element"> {{element.ciudad}} </td>
+        </ng-container>
+
+        <!-- Provincia Column -->
+        <ng-container matColumnDef="provincia">
+          <th mat-header-cell *matHeaderCellDef> Provincia </th>
+          <td mat-cell *matCellDef="let element"> {{element.provincia}} </td>
+        </ng-container>
+
+        <!-- Pais Column -->
+        <ng-container matColumnDef="pais">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Pais </th>
+          <td mat-cell *matCellDef="let element"> {{element.pais}} </td>
+        </ng-container>
+
+        <!-- Acciones Column -->
+
+        <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            <button (click)="agregarDireccion()" class="agregar" mat-raised-button color="primary">Agregar</button>
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <mat-icon (click)="editarDireccion(element.idUsuarioDireccion)" class="edit" matTooltip="Editar" fontIcon="edit"></mat-icon>
+            <mat-icon (click)="eliminarDireccion(element.idUsuarioDireccion)" class="delete" matTooltip="Eliminar" fontIcon="delete"></mat-icon>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="DireccionesdisplayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: DireccionesdisplayedColumns;"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[10, 20]"
+        showFirstLastButtons
+        aria-label="Select page of periodic elements">
+      </mat-paginator>
+    </div>
+    <div class="container-datos-usuario" id="telefono-section">
+      <mat-form-field appearance="standard">
+        <mat-label>Filtro</mat-label>
+        <input matInput (keyup)="applyFilterTelefonos($event)" placeholder="Buscar" #input autocomplete="off">
+      </mat-form-field>
+      <table mat-table [dataSource]="dataSourceTelefonos" class="mat-elevation-z5" matSort>
+        <!-- Nombre Column -->
+        <ng-container matColumnDef="numeroDeTelefono">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Numero de Telefono </th>
+          <td mat-cell *matCellDef="let element"> {{element.telefonoUsuario}} </td>
+        </ng-container>
+
+        <!-- Acciones Column -->
+        <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            <button (click)="agregarTelefono()" class="agregar" mat-raised-button color="primary">Agregar</button>
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <mat-icon (click)="editarTelefono(element.idUsuarioTelefono)" class="edit" matTooltip="Editar" fontIcon="edit"></mat-icon>
+            <mat-icon (click)="eliminarTelefono(element.idUsuarioTelefono)" class="delete" matTooltip="Eliminar" fontIcon="delete"></mat-icon>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="TelefonosdisplayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: TelefonosdisplayedColumns;"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[10, 20]"
+        showFirstLastButtons
+        aria-label="Select page of periodic elements">
+      </mat-paginator>
+    </div>
+  </div>
+</div>
