--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="section" id="store-section" [routerLink]="['/listadoProducto']" routerLinkActive="router-link-active"></div>
+  <div class="section" id="store-section" (click)="tienda()" routerLinkActive="router-link-active"></div>
   <div class="section" id="about-us-section" [routerLink]="['/about-us']" routerLinkActive="router-link-active"></div>
 </div>
 <div class="underlay-photo"></div>
