--- a/src/app/components/usuario/usuario-detalle/ver-usuario-detalle/ver-usuario-detalle.component.html
+++ b/src/app/components/usuario/usuario-detalle/ver-usuario-detalle/ver-usuario-detalle.component.html
@@ -1,1 +1,87 @@
-<p>ver-usuario-detalle works!</p>
+<div class="tittle">
+  <button class="registrarse-button" mat-raised-button routerLink="/listadoProducto">Volver</button>
+  <button class="logout-button" mat-raised-button (click)="cerrarSession()">Cerrar Session</button>
+  <h1>INFORMACION DEL USUARIO</h1>
+</div>
+
+<app-spinner *ngIf="loading"></app-spinner>
+<div>
+  <div *ngIf="usuarioRegister != null" class="container">
+    <mat-card class="card">
+        <mat-card-title class="data-tittle">
+          DATOS DEL USUARIO
+          <mat-card-actions>
+            <button class="editar-perfil" mat-raised-button (click)="editarPerfil()">Editar Perfil</button>
+          </mat-card-actions>
+        </mat-card-title>
+        <mat-card-content>
+            <p><strong>Mail del Usuario:</strong> {{ usuarioRegister.mailUsuario }}</p>
+            <p><strong>Contraseña del Usuario:</strong> {{ usuarioRegister.passwordUsuario }} </p>
+            <p><strong>Nombre del Usuario:</strong> {{ usuarioRegister.nombreUsuario }} </p>
+            <p><strong>Apellido del Usuario::</strong> {{ usuarioRegister.apellidoUsuario }}</p>
+            <p><strong>Fecha de nacimiento del Usuario::</strong> {{ usuarioRegister.fechaNacimientoUsuario }}</p>
+        </mat-card-content>
+    </mat-card>
+  </div>
+  <div class="container">
+    <div class="container-datos-usuario" id="direccion-section">
+      <mat-form-field appearance="standard">
+        <mat-label>Filtro</mat-label>
+        <input matInput (keyup)="applyFilterDirecciones($event)" placeholder="Buscar" #input autocomplete="off">
+      </mat-form-field>
+      <table mat-table [dataSource]="dataSourceDirecciones" class="mat-elevation-z5" matSort>
+
+        <!-- Direccion Column -->
+        <ng-container matColumnDef="direccionUsuario">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Direccion Usuario </th>
+          <td mat-cell *matCellDef="let element"> {{element.direccionUsuario}} </td>
+        </ng-container>
+
+        <!-- Ciudad Column -->
+        <ng-container matColumnDef="ciudad">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Ciudad </th>
+          <td mat-cell *matCellDef="let element"> {{element.ciudad}} </td>
+        </ng-container>
+
+        <!-- Provincia Column -->
+        <ng-container matColumnDef="provincia">
+          <th mat-header-cell *matHeaderCellDef> Provincia </th>
+          <td mat-cell *matCellDef="let element"> {{element.provincia}} </td>
+        </ng-container>
+
+        <!-- Pais Column -->
+        <ng-container matColumnDef="pais">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Pais </th>
+          <td mat-cell *matCellDef="let element"> {{element.pais}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="DireccionesdisplayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: DireccionesdisplayedColumns;"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[10, 20]"
+        showFirstLastButtons
+        aria-label="Select page of periodic elements">
+      </mat-paginator>
+    </div>
+    <div class="container-datos-usuario" id="telefono-section">
+      <mat-form-field appearance="standard">
+        <mat-label>Filtro</mat-label>
+        <input matInput (keyup)="applyFilterTelefonos($event)" placeholder="Buscar" #input autocomplete="off">
+      </mat-form-field>
+      <table mat-table [dataSource]="dataSourceTelefonos" class="mat-elevation-z5" matSort>
+        <!-- Nombre Column -->
+        <ng-container matColumnDef="numeroDeTelefono">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Numero de Telefono </th>
+          <td mat-cell *matCellDef="let element"> {{element.telefonoUsuario}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="TelefonosdisplayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: TelefonosdisplayedColumns;"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[10, 20]"
+        showFirstLastButtons
+        aria-label="Select page of periodic elements">
+      </mat-paginator>
+    </div>
+  </div>
+</div>
